--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,12 @@
             "Brookin\\ShunFeiSDKTest\\":"src/Brookin/ShunFeiSDKTest"
         }
     },
-    "require": {}
+    "require": {
+        "php": ">=5.6.0",
+        "guzzlehttp/guzzle": "^6.0",
+        "phpunit/phpunit": "^5.7",
+        "cstabor/screw": "1.0.5.5",
+        "netresearch/jsonmapper": "~1.",
+        "rafrsr/lib-array2object": "^1.0"
+    }
 }
